sun 6 aug update-1

--- a/public/civil/sem5/homepage.html
+++ b/public/civil/sem5/homepage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTU Diploma Civil Sem-5</title>
-    <link rel="stylesheet" href="/public/be619.css">
+    <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
@@ -33,7 +33,7 @@
         <!-- From  -->
         <span class="infdd">
             <span class="infsub">From: 2021-2022</span>
-            <span class="infsub">Branch Code: 06</span>
+            <span class="infsub">Branch Code: 07</span>
         </span>
         <!-- syllabus -->
         <div class="sydrp">
@@ -332,7 +332,7 @@
     <footer id="footer"></footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-<script src="/public/ru444.js"></script>
-<script src="/public/sy.js"></script>
+<script src="/ru444.js"></script>
+<script src="/sy.js"></script>
 
 </html>
