--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
         content="Gtu books free download ,  download diploma gtu  books  , download gtu diploma ,gtu Material, it, computer , electrical, civil, mechanical, Technological University,Old Papers , Exam Papers , Syllabus , Paper Solution, BE (Bachelor of Engineering), Sem 1, Sem 3,Sem 4, Sem 5, Sem 2 ">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content="Download GTU Books, Syllabus, Papers, Practical  PDF for Free, Diploma Engineering I.T | Computer | Civl | Mechanical | Electrical ">
+        content="Download GTU Books, Syllabus, Papers, Practical PDF for Free, Diploma Engineering 
+        I.T | Computer | Civil | Mechanical |">
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="cQwdBWIbhba4RItxT8gHfbwOF3U6Q9qQtujUT2CtO2s" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KhudKibook -Download Latest GTU Books | Papers | Syllabus Study Material</title>
+    <title>Download Latest GTU Books | Papers | Syllabus -Khudkibook</title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="sld646.css">
     <link rel="stylesheet" href="hip111.css">
@@ -40,11 +41,7 @@
         </nav>
     </header>
     <main>
-        <!-- add -->
-        <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-4211827566541334"
-            data-ad-slot="5361962105" data-auto-format="rspv" data-full-width="">
-            <div overflow=""></div>
-        </amp-ad>
+      
         <div class="nv759">
             <div class="nvl153">
                 <a id="atnvli953" href="/index.html">Home </a>
@@ -53,7 +50,7 @@
         </div>
         </div>
         <div class="drp1qa">
-            <h1 class="drphhw">Select Your Branch and Semester</h1>
+            <h2 class="drphhw">Select Your Branch and Semester</h2>
 
             <div>
                 <select name="branch" id="branch">
@@ -76,7 +73,7 @@
             </div>
             <input type="submit" id="submit" value="Submit">
         </div>
-        <h1 class="kl789123"> Diploma Engineering </h1>
+        <h2 class="kl789123"> Diploma Engineering </h2>
 
         <div aria-label="main content " id="main" class="ab12345">
             <div class="maniwrraper">
