--- a/public/it/sem4/homepage.html
+++ b/public/it/sem4/homepage.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diploma GTU I.T Sem-4 Study Material and all GTU Study Material</title>
-    <meta name="description" content="GTU Diploma free sudy Material, GTU IT sem 4 free books">
+    <title>Download I.T Sem-4 Diploma Books, Papers, Syllabus PDF</title>
+    <meta name="audience" content="Everyone">
+    <meta name="keywords"
+    content="Gtu books free download ,gtu Material, it, Old Papers , Exam Papers , Syllabus , Paper Solution, Sem 4, Sem 5 ,diploma gtu sem-4, 4341601,4341602,4341603,4341604 ">
+    <meta name="description" content="Download IT Sem-4 Books | Syllabus | Papers | Essentials of Digital Marketing | Object Oriented Programming with JAVA | Fundamentals of Machine Learning |  Web Development using PHP | Essence of Indian Knowledge and Tradition ">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
 </head>
@@ -43,7 +47,7 @@
                     </svg>
                 </span>
             </span>
-            <h1 class="infsub"></h1>
+            <h2 class="infsub"></h2>
             <table id="table">
                 <tr>
                     <th class="infsub">
@@ -165,9 +169,9 @@
 
                     </div>
                     <div class="mali147852">
-                        <h1 class="bn159"> Essentials of Digital Marketing </h1>
-                        <h1 class="d111">4341601</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h2 class="bn159"> Essentials of Digital Marketing </h2>
+                        <h2 class="d111">4341601</h2>
+                        <h2 class="d212">Credit-5</h2>
                         <input class="kpb789123" type="button" value="Open">
 
                     </div>
@@ -179,9 +183,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/035.png" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Object Oriented Programming with JAVA </h1>
-                        <h1 class="d111">4341602</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h2 class="bn159"> Object Oriented Programming with JAVA </h2>
+                        <h2 class="d111">4341602</h2>
+                        <h2 class="d212">Credit-5</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
@@ -192,9 +196,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Fundamentals of Machine Learning </h1>
-                        <h1 class="d111">4341603</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h2 class="bn159"> Fundamentals of Machine Learning </h2>
+                        <h2 class="d111">4341603</h2>
+                        <h2 class="d212">Credit-5</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
@@ -206,9 +210,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/030.png" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Web Development using PHP </h1>
-                        <h1 class="d111">4331604</h1>
-                        <h1 class="d212">Credit-2</h1>
+                        <h2 class="bn159"> Web Development using PHP </h2>
+                        <h2 class="d111">4331604</h2>
+                        <h2 class="d212">Credit-2</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
@@ -226,9 +230,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
-                        <h1 class="d111">4340001</h1>
-                        <h1 class="d212">Credit-2</h1>
+                        <h2 class="bn159">Essence of Indian Knowledge and Tradition</h2>
+                        <h2 class="d111">4340001</h2>
+                        <h2 class="d212">Credit-2</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
@@ -238,9 +242,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Contributor Personality Development</h1>
-                        <h1 class="d111">4340002</h1>
-                        <h1 class="d212">Credit-2</h1>
+                        <h2 class="bn159">Contributor Personality Development</h2>
+                        <h2 class="d111">4340002</h2>
+                        <h2 class="d212">Credit-2</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
@@ -250,9 +254,9 @@
                 <div class="abc123456">
                     <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Integrated Personality Development Course</h1>
-                        <h1 class="d111">4340003</h1>
-                        <h1 class="d212">Credit-2</h1>
+                        <h2 class="bn159">Integrated Personality Development Course</h2>
+                        <h2 class="d111">4340003</h2>
+                        <h2 class="d212">Credit-2</h2>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
@@ -261,7 +265,7 @@
         <h2 class="kl789123">
             Checkout
         </h2>
-        <div class="ch1233">
+        <div class="ch2233">
             <a class="btnch22" href="/it/sem1/homepage.html">Sem-1</a>
             <a class="btnch22" href="/it/sem2/homepage.html">Sem-2</a>
             <a class="btnch22" href="/it/sem3/homepage.html">Sem-3</a>
