--- a/public/mechanical/sem5/homepage.html
+++ b/public/mechanical/sem5/homepage.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU Diploma Computer Sem-5</title>
+    <title>GTU Diploma Mechanical Sem-5</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma free books download , sem-5 books  , gtu diploma sem-5 Computer, GTU, free books , Computer">
+        content="gtu diploma free books download , sem-5 books  , gtu diploma sem-5 mechanical, GTU, free books , mechanical">
     <meta name="description"
-        content="Download Free GTU Diploma computer as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
+        content="Download Free GTU Diploma mechanical as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
 
 </head>
 
 <body>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748"> GTU Diploma Computer Sem-5 </h1>
+        <h1 class="ph748"> GTU Diploma Mechanical Sem-5 </h1>
 
     </header>
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem5/homepage.html">Computer Sem-5</a>
+            <a id="atnvli953" href="/mechanical/sem5/homepage.html">Mechanical Sem-5</a>
         </div>
     </div>
     <main>
         <!-- From  -->
         <span class="infdd">
             <span class="infsub">From: 2021-2022</span>
-            <span class="infsub">Branch Code: 07</span>
+            <span class="infsub">Branch Code: 19</span>
         </span>
         <!-- syllabus -->
         <div class="sydrp">
@@ -70,60 +70,49 @@
                     <td>100</td>
                 </tr>
                 <tr>
-                    <td>4350701</td>
+                    <td>4351901</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1dXrStbK7m31gQ7upH4JFgTbDsTP9zDXX">
-                            Computer Organization and Architecture
-                        </a>
-                    </td>
-                    <td>4</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>4350702</td>
-                    <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1xja7XDy8jkQPJyrOj6S814ndPA_386a9">
-                            Introduction to Machine Learning
-                        </a>
-                    </td>
-                    <td>5</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>4350703</td>
-                    <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1O_XH9LmxNqbiYJ5gtHQdkV61QvQ4ZEuo">
-                            Mobile Application Development using Android
-                        </a>
-                    </td>
-                    <td>2</td>
-                    <td>50</td>
-                </tr>
-                <tr>
-                    <td>4350704</td>
-                    <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1Cv2xM5OKcpLTYIzfLaPsHJ14Py2a5Hmo">
-                            Internship Project
+                            href="https://drive.google.com/uc?export=download&id=1BjOC-aCzqQ_sda7tbJcK3z3UVXMjnXoG">
+                            Summer Internship-II
                         </a>
                     </td>
                     <td>3</td>
                     <td>100</td>
                 </tr>
                 <tr>
-                    <td>4350705</td>
+                    <td>4351902</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1O_59QfyNQFRZElPSAZx8ilBEIsGuxH9Y">
-                            Fundamentals of Artificial Intelligence
+                            href="https://drive.google.com/uc?export=download&id=1U74mt3owV45Lj7YCaz5Rka7IPNckEfJi">
+                            Manufacturing Engineering -III
                         </a>
                     </td>
                     <td>4</td>
                     <td>150</td>
                 </tr>
+                <tr>
+                    <td>4351903</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1M3wKN4XU-I1Q6ennk-Z4hLBOEv6_KHPV">
+                            Thermal Engineering-II</a>
+                    </td>
+                    <td>4</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>4351904</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1SFxRqpFiWU8BrV-ArhiOfWL1g_Ilx4DB">
+                            Mechnaical Engineering Project-I
+                        </a>
+                    </td>
+                    <td>2</td>
+                    <td>100</td>
+                </tr>
+
 
 
                 <tr>
@@ -138,34 +127,32 @@
                     <th>Marks</th>
                 </tr>
                 <tr>
-                    <td>4350706</td>
+                    <td>4351905</td>
 
                     <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1goo3VGNwqD4AOO-B7UAeJv7R2i1_HBu-">
-                            Advance Computer Network
+                        <a class="ssn" href="https://drive.google.com/uc?export=download&id=1G1CP-M9wfo4JSzsa8Xx0WSjs9GvDQfAN">
+                            Tool Engineering
+                        </a>
+                    </td>
+                    <td>4</td>
+                    <td>150</td>
+                </tr>
+
+                <tr>
+                    <td>4351906</td>
+                    <td>
+                        <a class="ssn" href="https://drive.google.com/uc?export=download&id=1IO0GcoGPI_RNhUWuHD9G8_hZ2yo7gLer">
+                           Advance Manufacturing System
                         </a>
                     </td>
                     <td>4</td>
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>4350707</td>
+                    <td>4351907</td>
                     <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1b6H6vo6XMAMuO9ZaydZfgk3hzTE5n7Yq">
-                            Multimedia Technologies
-                        </a>
-                    </td>
-                    <td>4</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>4350708</td>
-                    <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1bhu1XHApu5LvmLQXJXBnUvcngo3ESmCs">
-                            Web Based Java Programming
+                        <a class="ssn" href="https://drive.google.com/uc?export=download&id=19EQezFBM_vZDOO3vjvgP9QWBaUSfucL1">
+                            Renewable and Green Energy
                         </a>
                     </td>
                     <td>4</td>
@@ -181,64 +168,51 @@
             Compulsory
         </h2>
         <div aria-label="main content " class="ab12345">
-            <!-- Computer Organization and Architecture	  -->
-            <a href="/computer/sem5/COA.html">
+           
+            <!--     Manufacturing Engineering -III		 -->
+            <a href="/mechanical/sem5/IML.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
-                        alt=" Computer Organization and Architecture	 book download" srcset="">
+                        alt="  Manufacturing Engineering -III	 book download">
                     <div class="mali147852">
-                        <h1 class="bn159"> Computer Organization and Architecture </h1>
-                        <h1 class="d111">4350701</h1>
+                        <h1 class="bn159">Manufacturing Engineering -III </h1>
+                        <h1 class="d111">4351902</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
+
+
                 </div>
             </a>
-            <!--    Introduction to Machine Learning		 -->
-            <a href="/computer/sem5/IML.html">
+            <!--      Thermal Engineering-II -->
+            <a href="/mechanical/sem5/MADA.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
-                        alt=" Introduction to Machine Learning	 book download">
+                        alt="   Thermal Engineering-II book download ">
                     <div class="mali147852">
-                        <h1 class="bn159"> Introduction to Machine Learning </h1>
-                        <h1 class="d111">4350702</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h1 class="bn159">Thermal Engineering-II</h1>
+                        <h1 class="d111">4351903</h1>
+                        <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
 
                 </div>
             </a>
-            <!--    Mobile Application Development using Android	 -->
-            <a href="/computer/sem5/MADA.html">
+             <!--  Mechnaical Engineering Project-I	  -->
+             <a href="/mechanical/sem5/COA.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
-                        alt=" Mobile Application Development using Android	 book download ">
+                        alt="  Mechnaical Engineering Project-I	 book download" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Mobile Application Development using Android </h1>
-                        <h1 class="d111">4350703</h1>
+                        <h1 class="bn159">Mechnaical Engineering Project-I </h1>
+                        <h1 class="d111">4351904</h1>
                         <h1 class="d212">Credit-2</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
-
-
                 </div>
             </a>
-            <!--	Fundamentals of Artificial Intelligence -->
-            <a href="/computer/sem5/FAI.html">
-                <div class="abc123456">
-                    <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
-                        alt="Fundamentals of Artificial Intelligence computer" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Fundamentals of Artificial Intelligence </h1>
-                        <h1 class="d111">4350705</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
 
-
-                </div>
-            </a>
         </div>
         <!-- Elective -->
         <h2 class="kl789123">
@@ -247,38 +221,39 @@
         <div aria-label="main content " class="ab12345">
 
 
-            <!--   Advance Computer Network		  -->
-            <a href="/computer/sem5/ACN.html">
+            <!--   Tool Engineering			  -->
+            <a href="/mechanical/sem5/ACN.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
-                        alt=" Advance Computer Network	 study material" srcset="">
+                        alt=" Tool Engineering study material" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Advance Computer Network </h1>
-                        <h1 class="d111">4350706</h1>
+                        <h1 class="bn159"> Tool Engineering </h1>
+                        <h1 class="d111">4351905</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
-            <!--Multimedia Technologies  -->
-            <a href="/computer/sem5/MT.html">
+
+            <!--  Advance Manufacturing System		  -->
+            <a href="/mechanical/sem5/WBJP.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Multimedia Technologies</h1>
-                        <h1 class="d111">4350707</h1>
+                        <h1 class="bn159">Advance Manufacturing System </h1>
+                        <h1 class="d111">4351906</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
-            <!--  Web Based Java Programming	  -->
-            <a href="/computer/sem5/WBJP.html">
+            <!--  Renewable and Green Energy		  -->
+            <a href="/mechanical/sem5/WBJP.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Web Based Java Programming </h1>
-                        <h1 class="d111">4350708</h1>
+                        <h1 class="bn159">Renewable and Green Energy </h1>
+                        <h1 class="d111">4351907</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
@@ -290,11 +265,11 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/computer/sem1/homepage.html">Sem-1</a>
-            <a class="btnch22" href="/computer/sem2/homepage.html">Sem-2</a>
-            <a class="btnch22" href="/computer/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/computer/sem4/homepage.html">Sem-4</a>
-            <a class="btnch22" href="/computer/sem6/homepage.html">Sem-6</a>
+            <a class="btnch22" href="/mechanical/sem1/homepage.html">Sem-1</a>
+            <a class="btnch22" href="/mechanical/sem2/homepage.html">Sem-2</a>
+            <a class="btnch22" href="/mechanical/sem3/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/mechanical/sem4/homepage.html">Sem-4</a>
+            <a class="btnch22" href="/mechanical/sem6/homepage.html">Sem-6</a>
         </div>
 
 
