--- a/public/electrical/sem5/homepage.html
+++ b/public/electrical/sem5/homepage.html
@@ -162,7 +162,7 @@
         </h2>
         <div aria-label="main content " class="ab12345">
             <!--  Switchgear & Protection		  -->
-            <a href="/electrical/sem5/COA.html">
+            <a href="/electrical/sem5/SP.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="  Switchgear & Protection		 book download" srcset="">
@@ -175,7 +175,7 @@
                 </div>
             </a>
             <!--     Power Electronics & Drives			 -->
-            <a href="/electrical/sem5/IML.html">
+            <a href="/electrical/sem5/PED.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="  Power Electronics & Drives		 book download">
@@ -190,7 +190,7 @@
                 </div>
             </a>
             <!--     Electrical Engineering Project-I		 -->
-            <a href="/electrical/sem5/MADA.html">
+            <a href="/electrical/sem5/EEP-I.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="  Electrical Engineering Project-I		 book download ">
@@ -214,7 +214,7 @@
 
 
             <!--   Special Electrical Machine			  -->
-            <a href="/electrical/sem5/ACN.html">
+            <a href="/electrical/sem5/SEM.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt=" Special Electrical Machine		 study material" srcset="">
@@ -228,7 +228,7 @@
             </a>
             
             <!--   Electrical Traction & Control		  -->
-            <a href="/electrical/sem5/WBJP.html">
+            <a href="/electrical/sem5/ETC.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
