--- a/public/mechanical/sem5/homepage.html
+++ b/public/mechanical/sem5/homepage.html
@@ -170,7 +170,7 @@
         <div aria-label="main content " class="ab12345">
            
             <!--     Manufacturing Engineering -III		 -->
-            <a href="/mechanical/sem5/IML.html">
+            <a href="/mechanical/sem5/ME-III.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="  Manufacturing Engineering -III	 book download">
@@ -185,7 +185,7 @@
                 </div>
             </a>
             <!--      Thermal Engineering-II -->
-            <a href="/mechanical/sem5/MADA.html">
+            <a href="/mechanical/sem5/TE-II.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="   Thermal Engineering-II book download ">
@@ -200,7 +200,7 @@
                 </div>
             </a>
              <!--  Mechnaical Engineering Project-I	  -->
-             <a href="/mechanical/sem5/COA.html">
+             <a href="/mechanical/sem5/MEP-I.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt="  Mechnaical Engineering Project-I	 book download" srcset="">
@@ -222,7 +222,7 @@
 
 
             <!--   Tool Engineering			  -->
-            <a href="/mechanical/sem5/ACN.html">
+            <a href="/mechanical/sem5/TE.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
                         alt=" Tool Engineering study material" srcset="">
@@ -236,7 +236,7 @@
             </a>
 
             <!--  Advance Manufacturing System		  -->
-            <a href="/mechanical/sem5/WBJP.html">
+            <a href="/mechanical/sem5/AMS.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
@@ -248,7 +248,7 @@
                 </div>
             </a>
             <!--  Renewable and Green Energy		  -->
-            <a href="/mechanical/sem5/WBJP.html">
+            <a href="/mechanical/sem5/RGE.html">
                 <div class="abc123456">
                     <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Image Not Avilable" srcset="">
                     <div class="mali147852">
