--- a/public/civil/sem5/AAS.html
+++ b/public/civil/sem5/AAS.html
@@ -434,50 +434,50 @@
             </div>
         </a>
     </div>
-    <!-- Elective -->
-    <h2 class="kl789123">
-        Semester-4 (Elective)
-    </h2>
-    <div aria-label="main content " class="ab12345">
+  <!-- Elective -->
+  <h2 class="kl789123">
+    Semester-4 (Elective)
+</h2>
+<div aria-label="main content " class="ab12345">
 
 
-        Essence of Indian Knowledge and Tradition
-        <a href="/it/sem4/EIKT.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
-                    <h1 class="d111">4340001</h1>
-                    <h1 class="d212">Credit-2</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
+    <!-- Essence of Indian Knowledge and Tradition -->
+    <a href="/it/sem4/EIKT.html">
+        <div class="abc123456">
+            <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+            <div class="mali147852">
+                <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
+                <h1 class="d111">4340001</h1>
+                <h1 class="d212">Credit-2</h1>
+                <input class="kpb789123" type="button" value="Open">
             </div>
-        </a>
-        Contributor Personality Development
-        <a href="/it/sem4/CPD.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Contributor Personality Development</h1>
-                    <h1 class="d111">4340002</h1>
-                    <h1 class="d212">Credit-2</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
+        </div>
+    </a>
+    <!-- Contributor Personality Development -->
+    <a href="/it/sem4/CPD.html">
+        <div class="abc123456">
+            <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+            <div class="mali147852">
+                <h1 class="bn159">Contributor Personality Development</h1>
+                <h1 class="d111">4340002</h1>
+                <h1 class="d212">Credit-2</h1>
+                <input class="kpb789123" type="button" value="Open">
             </div>
-        </a>
-        Integrated Personality Development Course
-        <a href="/it/sem4/IPDC.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Integrated Personality Development Course</h1>
-                    <h1 class="d111">4340003</h1>
-                    <h1 class="d212">Credit-2</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
+        </div>
+    </a>
+    <!-- Integrated Personality Development Course -->
+    <a href="/it/sem4/IPDC.html">
+        <div class="abc123456">
+            <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+            <div class="mali147852">
+                <h1 class="bn159">Integrated Personality Development Course</h1>
+                <h1 class="d111">4340003</h1>
+                <h1 class="d212">Credit-2</h1>
+                <input class="kpb789123" type="button" value="Open">
             </div>
-        </a>
-    </div>
+        </div>
+    </a>
+</div>
     <!-- Footer -->
     <footer id="footer">
     </footer>
