--- a/public/civil/sem5/IE.html
+++ b/public/civil/sem5/IE.html
@@ -442,7 +442,7 @@
     <div aria-label="main content " class="ab12345">
 
 
-        Essence of Indian Knowledge and Tradition
+        <!-- Essence of Indian Knowledge and Tradition -->
         <a href="/it/sem4/EIKT.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -454,7 +454,7 @@
                 </div>
             </div>
         </a>
-        Contributor Personality Development
+        <!-- Contributor Personality Development -->
         <a href="/it/sem4/CPD.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -466,7 +466,7 @@
                 </div>
             </div>
         </a>
-        Integrated Personality Development Course
+        <!-- Integrated Personality Development Course -->
         <a href="/it/sem4/IPDC.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
