--- a/public/civil/sem5/CT.html
+++ b/public/civil/sem5/CT.html
@@ -94,11 +94,12 @@
         Semester-5 (Compulsory)
     </h2>
     <div aria-label="main content " class="ab12345">
-        
+
         <!--   Water Resource Engineering	 -->
         <a href="/civil/sem5/WRE.html">
             <div class="abc123456">
-                <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Water Resource Engineering book download">
+                <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
+                    alt="Water Resource Engineering book download">
                 <div class="mali147852">
                     <h1 class="bn159"> Water Resource Engineering </h1>
                     <h1 class="d111">4350602</h1>
@@ -112,7 +113,8 @@
         <!--   Civil Engineering Project-I -->
         <a href="/civil/sem5/CEP.html">
             <div class="abc123456">
-                <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Civil Engineering Project-I book download ">
+                <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
+                    alt="Civil Engineering Project-I book download ">
                 <div class="mali147852">
                     <h1 class="bn159"> Civil Engineering Project-I</h1>
                     <h1 class="d111">4350603</h1>
@@ -123,7 +125,7 @@
 
             </div>
         </a>
-        
+
     </div>
     <!-- Elective -->
     <h2 class="kl789123">
@@ -133,8 +135,8 @@
         <!--  Advance Construction Technology	  -->
         <a href="/civil/sem5/ACT.html">
             <div class="abc123456">
-                <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt="Advance Construction Technology study material"
-                    srcset="">
+                <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
+                    alt="Advance Construction Technology study material" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159"> Advance Construction Technology </h1>
                     <h1 class="d111">4350605</h1>
@@ -182,8 +184,8 @@
         <!--  Advance Analysis of Structures	  -->
         <a href="/civil/sem5/AAS.html">
             <div class="abc123456">
-                <img class="i12345" src="https://khudkibook.web.app/img/na.webp" alt=" Advance Analysis of Structures	study material gtu"
-                    srcset="">
+                <img class="i12345" src="https://khudkibook.web.app/img/na.webp"
+                    alt=" Advance Analysis of Structures	study material gtu" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159"> Advance Analysis of Structures </h1>
                     <h1 class="d111">4350608</h1>
@@ -193,7 +195,7 @@
             </div>
         </a>
     </div>
- 
+
 
     <!-- Sem-1 -->
     <h1 class="kl789123">
@@ -378,7 +380,7 @@
             </div>
         </a>
     </div>
-       <!-- Sem-4 -->
+    <!-- Sem-4 -->
     <!-- Compulsory -->
     <h2 class="kl789123">
         Semester-4 (Compulsory)
@@ -442,7 +444,7 @@
     <div aria-label="main content " class="ab12345">
 
 
-        Essence of Indian Knowledge and Tradition
+        <!-- Essence of Indian Knowledge and Tradition -->
         <a href="/it/sem4/EIKT.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -454,7 +456,7 @@
                 </div>
             </div>
         </a>
-        Contributor Personality Development
+        <!-- Contributor Personality Development -->
         <a href="/it/sem4/CPD.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -466,7 +468,7 @@
                 </div>
             </div>
         </a>
-        Integrated Personality Development Course
+        <!-- Integrated Personality Development Course -->
         <a href="/it/sem4/IPDC.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -479,6 +481,7 @@
             </div>
         </a>
     </div>
+
     <!-- Footer -->
     <footer id="footer">
     </footer>
